Try fix menu navbar button mobile

--- a/src/css/NavBar.css
+++ b/src/css/NavBar.css
@@ -137,4 +137,7 @@
     background-color: #233329;
     opacity: 0.6;
   }
+  .navbar{
+    justify-content: center;
+  }
 }
