--- a/src/pages/Menu.css
+++ b/src/pages/Menu.css
@@ -52,8 +52,4 @@
       width: 460px;
     }
 
-    .App{
-      width: 100%;
-    }
   }
-  2.5 5.3
